--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,19 +2,8 @@
 MeyerWeb Reset
 *******************************************************************************/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, h1, h2, p,
+a, footer, header, section {
     margin: 0;
     padding: 0;
     border: 0;
@@ -23,18 +12,8 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, section {
     display: block;
-}
-
-ol, ul {
-    list-style: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
 }
 
 /*******************************************************************************
@@ -51,7 +30,7 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
     margin: 10px 0;
     font-weight: 700;
     color: #f2f2f2;
@@ -77,26 +56,6 @@ p {
 footer p {
     color: #666;
 }
-
-a {
-    text-decoration: none;
-    color: #007edf;
-    text-shadow: none;
-    transition: color 0.5s ease;
-    transition: text-shadow 0.5s ease;
-    -webkit-transition: color 0.5s ease;
-    -webkit-transition: text-shadow 0.5s ease;
-    -moz-transition: color 0.5s ease;
-    -moz-transition: text-shadow 0.5s ease;
-    -o-transition: color 0.5s ease;
-    -o-transition: text-shadow 0.5s ease;
-    -ms-transition: color 0.5s ease;
-    -ms-transition: text-shadow 0.5s ease;
-}
-
-    a:hover, a:focus {
-        text-decoration: underline;
-    }
 
 footer a {
     color: #666;
@@ -141,16 +100,12 @@ Full-Width Styles
     background: -ms-linear-gradient(top, #373737, #000);
     background: -o-linear-gradient(top, #373737, #000);
     background: linear-gradient(top, #373737, #000);
+    text-align: center;
 }
 
     #header_wrap .inner {
         padding: 30px 10px 30px 10px;
     }
-
-#main_content_wrap {
-    border-top: 1px solid #111;
-    border-bottom: 1px solid #111;
-}
 
 #main_content {
     padding-top: 40px;
